--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "go": "ts-node",
     "test": "jest --watchAll"
   },
   "keywords": [],
@@ -11,8 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.14",
     "jest": "^27.4.7",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   }
 }
