--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "forceConsistentCasingInFileNames": false,
         "noFallthroughCasesInSwitch": false,
         "resolveJsonModule": true,
-        "allowJs": true
+        "allowJs": true,
+        "esModuleInterop": true
     }
 }
