--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "go": "ts-node",
+    "start": "node dist/example-test/exampleTypescript.js",
+    "dev": "nodemon src/example-test/exampleTypescript.ts",
+    "build": "tsc -p .",
     "test": "jest --watchAll"
   },
   "keywords": [],
@@ -14,6 +16,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.14",
     "jest": "^27.4.7",
+    "nodemon": "^2.0.15",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
