--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "target": "es2017",
         "sourceMap": true,
         "outDir": "./dist",
+
         "baseUrl": "./",
         "incremental": true,
         "skipLibCheck": true,
@@ -18,6 +19,7 @@
         "forceConsistentCasingInFileNames": false,
         "noFallthroughCasesInSwitch": false,
         "resolveJsonModule": true,
+        "moduleResolution": "node",
         "allowJs": true
     }
 }
